# dias-package-project

./: .env.example  .gitignore  .pre-commit-config.yaml  BLUEPRINT.md  CHANGELOG.md  CONFIG_GUIDE.md  HANDOFF.md  LICENSE  LOCALIZATION.md  README.md  SECURITY.md  app.py  build_exe.spec  codecov.yml  dias_config.example.yml  dias_mets.xsd  dias_premis.xsd  pyproject.toml  requirements-dev.txt  requirements.txt  submissionDescription.xsd
.github/: copilot-instructions.md
.github/workflows/: ci.yml  windows-exe.yml
data/input/: simple_dublin_core_example.xml  submission_description_example.xml
data/input/test_aip/: metadata.xml  readme.md  test_document.txt
docs/: CONFIG_GUIDE.md  INSTALL.md  OPERATIONS.md  RELEASE.md  TEST_REPORT.md  USER_GUIDE.md
src/: __init__.py
src/core/: __init__.py  dias_controller.py  job_manager.py
src/dias_package_creator/: __init__.py  dias_xml_generators.py  metadata_handler.py  package_inspector.py  package_validator.py
src/gui/: __init__.py  labels.py  main_window.py  widgets.py
src/utils/: __init__.py  config_loader.py  env_config.py  file_processor.py  logging_config.py  platform_utils.py  validation.py
tests/: __init__.py  test_config_loader.py  test_dias_controller.py  test_dias_creator.py  test_env_config.py  test_job_manager.py  test_logging_config.py  test_package_inspector.py  test_package_validator.py  test_platform.py  test_premis.py  test_validation.py
