[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dias-package-creator"
version = "1.0.0"
description = "GUI application for creating DIAS-compliant archival packages for the Norwegian National Archives"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fredrik", email = ""}
]
maintainers = [
    {name = "Fredrik", email = ""}
]
keywords = [
    "DIAS",
    "archival",
    "METS",
    "PREMIS",
    "National Archives",
    "Norway",
    "digital preservation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Norwegian",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "flake8>=6.1.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/IKATrondelag/dias-package-project"
Documentation = "https://github.com/IKATrondelag/dias-package-project#readme"
Repository = "https://github.com/IKATrondelag/dias-package-project.git"
Issues = "https://github.com/IKATrondelag/dias-package-project/issues"
Changelog = "https://github.com/IKATrondelag/dias-package-project/blob/main/CHANGELOG.md"

[project.scripts]
dias-package-creator = "app:main"

[project.gui-scripts]
dias-package-creator-gui = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.xsd", "*.yml", "*.yaml", "*.example"]

# ============================================================================
# Tool configurations
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI (tkinter)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 25
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[tool.flake8]
max-line-length = 120
max-complexity = 15
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "W503",  # Line break before binary operator
]

[tool.pylint.main]
ignore = ["tests", "build", "dist"]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0511",  # TODO/FIXME comments
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # Skip assert warnings in production code
